<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:fontFamily="@font/nunito_medium"
        android:layout_gravity="center_horizontal|center"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="38dp"
        android:layout_width="431dp"
        android:layout_height="77dp"
        android:layout_centerHorizontal="true"
        android:text="@string/passRecovery"
        />

    <ImageButton android:id="@+id/btn_back"
        android:background="@drawable/btn_back_dark"
        android:layout_marginStart="12dp"
        android:layout_marginTop="60dp"
        android:layout_width="35dp"
        android:layout_height="35dp" />

    <TextView
        android:fontFamily="@font/nunito_medium"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="258dp"
        android:layout_width="178.15dp"
        android:layout_height="30.5dp"
        android:text="@string/email_txt"
        />
    <EditText
        android:id="@+id/tb_email"
        android:background="@drawable/input_field"
        android:layout_marginStart="25dp"
        android:layout_marginTop="278dp"
        android:layout_width="362dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:paddingStart="15dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_recoverPassword"
        android:background="@drawable/btn_register"
        android:layout_marginStart="25dp"
        android:layout_marginTop="496dp"
        android:layout_width="362dp"
        android:layout_height="60dp"
        android:text="@string/recover_password"
        android:textColor="@color/white"
        android:fontFamily="@font/nunito_medium"
        android:textSize="14sp"
        android:layout_centerHorizontal="true"
        />




</RelativeLayout>